--- a/index.html
+++ b/index.html
@@ -1,82 +1,88 @@
 <!DOCTYPE html>
-	<!DOCTYPE html>
 	<html>
-	<head>
-
-		<style>
-
-		body {
-				background-color: grey;
-			}
-		h1 {
-
-				text-align: center;
-				color: white;
-				background-color: black;
-
-			}
-
-		.div1 {
-				text-decoration-color: white;
-				font-size: 20px;
-				float: left;
-				width: 300px;
-
-			}
-
-			img {
-
-				float: left;
-			}
-
-			.Contact {
-
-				float: right;
-				width: 200px;
-			}
-
-</style>
-
-
-
-
-
-
-
-
-
-
-	<title>Amin Kedir</title>
-		<h1><strong>Amin Kedir</strong></h1>
-
-	</head>
-		<meta charset="utf-8">
-	<body width="400px">
-
-<img src="https://scontent-iad3-1.cdninstagram.com/t51.2885-19/s150x150/14359979_301159573595997_429072452_a.jpg" style="width: 300px; height: 400px">
-	<div class="div1">
-		<p>
-			My name is Mohamedamin Kedir, however i often go by Amin as well. I recently picked up coding when i was forced into a situation where i had to create my own webpage. I am an entrepeneur at heart, but have a passion for coding and computer programming.
-		</p>
-			
-		<p>
-			After learning some basic HTML and CSS on my own, I found myself yearning to learn more. I started looking into some of the different programming languages and picked at it slowly. That is when i realized i wanted to dive into it head first, but needed a structured lesson plan, and before long, i found the University of Minnesota coding bootcamp
-		</p>
-
+		<head>
+				<meta charset="utf-8">
 		
+				<title>Amin Kedir</title>
+		
+		
+				<link rel="stylesheet" type="text/css" href="assets/css/style.css">
+				<link rel="stylesheet" type="text/css" href="assets/css/reset.css">
+			
+		</head>
+
+	<body>
+
+		<!-- <img src="satinweave.jpg"> -->
+	
+	<div id="header">
+	  <div id="justname">	
+		<h1>Amin Kedir</h1>
+	  </div>	
+			<div class="links">
+
+				<ul>
+					<li id="About"><a href="index.html"> About</a></li>
+					<li><a href="portfolio.html">Portfolio</a></li>
+					<li><a href="contact.html">Contact</a></li>
+
+				</ul>
+			</div>
 	</div>
 
-	<div class="Contact">
+	
 
-		<h2>
-			Contact info.
-		</h2>
-		<ul>
-			<li><strong>Email:</strong> <a href="https://gmail.com">m.aminkedir@gmail.com</li>
-			<li><strong>Github:</strong> <a href="Github">mkedir001</a></li>
-			<li><strong>Portfolio:</strong> <a href="Github">My portfolio</a></li>			
+<div class="main">
+	
+		<div class="container div1">
+				<div id="aboutme">
+					<h4> About me </h4>
+				</div>
+						
 
-		</ul>
-	</div>
+					<img src="https://scontent-iad3-1.cdninstagram.com/t51.2885-19/s150x150/14359979_301159573595997_429072452_a.jpg" style="width: 200px;">
+
+					<div id="p1">
+							<p>
+				 					&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;My name is Mohamedamin Kedir, however i often go by Amin as well. I recently picked up coding when i was forced into a situation where I had to create my own webpage. I am an entrepeneur at heart, but have a passion for coding and computer programming.
+							</p>
+
+												<br>
+			
+							<p>
+									&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;After learning some basic HTML and CSS on my own, I found myself yearning to learn more. I started looking into some of the different programming languages and picked at it slowly. That is when I realized I wanted to dive into it head first, but needed a structured lesson plan, and before long, I found the U of M bootcamp
+							</p>
+					</div>
+
+
+		</div>
+
+
+		<div class="contact">
+			<div id="connect1">
+				<h3>
+					Connect with me
+				</h3>
+			</div>
+					<div class="connect">
+						<ul>
+							<li><a href="linkedin"><img src="assets/images/linkedin.logo.png" width="50px"></li>
+							<li><a href="Github"><img src="assets/images/github.logo.png" width="45px"></a></li>
+							<li><a href="Stackoverflow"><img src="assets/images/stackoverflow.png" width="40px"></a></li>		
+
+						</ul>
+					</div>	
+
+		</div>
+</div>
+
+
+		<div class="footer">
+			<footer>
+				<p>Copy right Amin Kedir 2017</p>
+			</footer>
+
+		</div>
+
 	</body>
 	</html>
